--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "http": "^0.0.1-security",
+    "socket.io": "^4.5.2"
   }
 }
