--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "express.js backend",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "Brian Duranleau",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
+    "nodemon": "^2.0.20",
     "socket.io": "^4.5.2"
   }
 }
